# rust-jwt-provider

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: error.rs  jwt.rs
doc/: openapi.json
migrations/2022-01-01-090100_init/: up.sql
migrations/2022-01-01-090307_create_tables/: down.sql  up.sql
service/: Cargo.toml
service/src/: introspect.rs  lib.rs
src/: main.rs  schema.rs
src/api/routes/: client.rs  error.rs  jwt.rs  mod.rs  tenant.rs
src/db/: access_token.rs  client.rs  mod.rs  refresh_token.rs  schema.rs  tenant.rs
src/service/: client.rs  error.rs  introspect.rs  issue.rs  mod.rs
