[package]
name = "api"
version = "0.0.1"
authors = ["nnishimura <naoko.nishimura1018@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies.log]
version = "0.4"

[dependencies.futures]
version = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]

[dependencies.service]
path = "../service"
