[package]
name = "service"
version = "0.0.0"
authors = ["Naoko.Nishimura <naoko.nishimura1018@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7.2.0"
log = "0.4"

[dependencies.reqwest]
version = "0.11.3"
features = ["json"]

[dependencies.serde]
version = "1.0.125"

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.3.0"
features = ["full"]
